# Perfume-Recommendation-System

./: Abdulkrem EN.ipynb  Abdullah.ipynb  GD.ipynb  Mamdouh_Links scrapping .ipynb  README.md  abdulkrem.ipynb  data_analysis_modeling.ipynb  final.csv  golden_scent_perfumes.csv  golden_scent_perfumes2.csv  kmeans.joblib  main.py  requirements.txt  scaler.joblib  streamlit_app.py  unique_links.txt
.ipynb_checkpoints/: Abdullah-checkpoint.ipynb  GD-checkpoint.ipynb
Data/: Perfume_Details_Scrapping.rs  all_data_dict.json  all_p_dict - Copy.json  all_p_dict.json  brand_links.json  brand_links_sorted.json  golden_scent_perfumes - Copy.json  golden_scent_perfumes3.csv  golden_scent_perfumes5.csv  updated_links_with_en.txt
Perfume_Details_Scrapping/: Cargo.toml
Perfume_Details_Scrapping/src/: main.rs
Python_Scrappers/: JSON_To_CSV.py  Perfume_Details_Scrapping.py  Perfume_Links_Scrapping.py  brand_Scrapping.py
