[package]
name = "Perfume_Details_Scrapping"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

playwright = "0.0.20"

#serde_json = "1.0"

